python-lint-unittest.yml rising
Applied python-lint-unittest.yml to rising branch.

--- a/.github/workflows/python-lint-unittest.yml
+++ b/.github/workflows/python-lint-unittest.yml
@@ -5,9 +5,9 @@ name: Python application
 
 on:
   push:
-    branches: [ undying ]
+    branches: [ undying, rising ]
   pull_request:
-    branches: [ undying ]
+    branches: [ undying, rising ]
 
 jobs:
   build:
